syntax = "proto3";

package UtilPb;

option go_package = "cqrs-grpc-test/api/utilpb";

message QueryRange {
  int64 page_size = 1;
  int64 page = 2;
}